Update 'backend-tests-go-sxoanecf' component image to: quay.io/rhtap_qe/backend-tests-go-sxoanecf:16d05c2dd6030d2d32b23c16f074e895e6dca7bf@sha256:7202af4105d17d522cd6b9df8a403fe2913345035c9325053755070183d46816

--- a/components/backend-tests-go-sxoanecf/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-sxoanecf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-sxoanecf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-sxoanecf:16d05c2dd6030d2d32b23c16f074e895e6dca7bf@sha256:7202af4105d17d522cd6b9df8a403fe2913345035c9325053755070183d46816
+          name: container-image
